# pip-Package-Manager

./: CMakeLists.txt
include/: PackageManager.h  PackageManagerToolkit.h  pip.h
src/: pip.cpp
